containers/socket.io/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: socketio-server
  labels:
    app: socketio-server
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: socketio-server
